[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/FullScreenPopup/SlottableInspector/SlottableInspector.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/FullScreenPopup/SlottableInspector/StatsInspector/StatsInspector.gd" type="Script" id=2]
[ext_resource path="res://RESOURCES/GuiImages/DivisionLine.png" type="Texture" id=3]
[ext_resource path="res://RESOURCES/Font/BMYEONSUNG.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 4 )

[node name="StatsInspector" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="TierLine" type="HBoxContainer" parent="Panel/VBoxContainer" index="2"]
margin_top = 128.0
margin_right = 840.0
margin_bottom = 143.0

[node name="LeftMargin" type="Label" parent="Panel/VBoxContainer/TierLine" index="0"]
margin_right = 100.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/TierLine" index="1"]
margin_left = 104.0
margin_right = 736.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
texture = ExtResource( 3 )
expand = true

[node name="RightMargin" type="Label" parent="Panel/VBoxContainer/TierLine" index="2"]
margin_left = 740.0
margin_right = 840.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[node name="TierStars" type="HBoxContainer" parent="Panel/VBoxContainer" index="3"]
margin_top = 147.0
margin_right = 840.0
margin_bottom = 161.0

[node name="Margin1" type="Label" parent="Panel/VBoxContainer/TierStars" index="0"]
margin_right = 416.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="TierStarsContainer" type="HBoxContainer" parent="Panel/VBoxContainer/TierStars" index="1"]
margin_left = 420.0
margin_right = 420.0
margin_bottom = 14.0

[node name="Margin2" type="Label" parent="Panel/VBoxContainer/TierStars" index="2"]
margin_left = 424.0
margin_right = 840.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Line1" parent="Panel/VBoxContainer" index="4"]
margin_top = 165.0
margin_bottom = 180.0

[node name="Image" parent="Panel/VBoxContainer" index="5"]
margin_top = 184.0
margin_bottom = 584.0

[node name="StatsLine" type="HBoxContainer" parent="Panel/VBoxContainer" index="6"]
margin_top = 588.0
margin_right = 840.0
margin_bottom = 603.0

[node name="LeftMargin" type="Label" parent="Panel/VBoxContainer/StatsLine" index="0"]
margin_right = 100.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/StatsLine" index="1"]
margin_left = 104.0
margin_right = 736.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
texture = ExtResource( 3 )
expand = true

[node name="RightMargin" type="Label" parent="Panel/VBoxContainer/StatsLine" index="2"]
margin_left = 740.0
margin_right = 840.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[node name="Stats" type="ScrollContainer" parent="Panel/VBoxContainer" index="7"]
margin_top = 607.0
margin_right = 840.0
margin_bottom = 1377.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StatsContainer" type="VBoxContainer" parent="Panel/VBoxContainer/Stats" index="0"]
margin_right = 840.0
margin_bottom = 770.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Line2" parent="Panel/VBoxContainer" index="8"]
margin_top = 1381.0
margin_bottom = 1396.0

[node name="Special" type="Label" parent="Panel/VBoxContainer" index="9"]
margin_top = 1400.0
margin_right = 840.0
margin_bottom = 1460.0
custom_fonts/font = SubResource( 2 )
text = "Special"
align = 1
valign = 1
autowrap = true
